--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       background-color:#222222;
       margin:0;
       padding:0;
-      overflow-y:hidden;
+      overflow-x:hidden;
       overflow-x:hidden;
     }
     main{
@@ -64,6 +64,7 @@
       resize:none;
       color:white;
       height:100%;
+      white:100%;
       overflow:auto;
       font-weight:300;
       font-size:1rem;
@@ -94,6 +95,9 @@
     @media only screen and (max-width: 1200px){
       main{
         max-width:100%;
+      }
+      textarea {
+        width:100%;
       }
     }
     </style>
