--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     }
     @media only screen and (max-width: 1200px){
       main{
-        max-width:100%;
+        width:100%;
       }
       textarea {
         width:100%;
