--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       background-color:#222222;
       margin:0;
       padding:0;
-      overflow-x:hidden;
+      overflow-y:hidden;
       overflow-x:hidden;
     }
     main{
@@ -94,7 +94,7 @@
     }
     @media only screen and (max-width: 1200px){
       main{
-        width:100%;
+        max-width:100%;
       }
       textarea {
         width:100%;
