--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       resize:none;
       color:white;
       height:100%;
-      white:100%;
+      width:100%;
       overflow:auto;
       font-weight:300;
       font-size:1rem;
