--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       color:white;
       height:100%;
       width:100%;
-      overflow:auto;
+      overflow:hidden;
       font-weight:300;
       font-size:1rem;
     }
