--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       overflow-x:hidden;
       width:100%;
     }
-    main{
+    div{
       display:flex;
       flex-direction:column;
       max-width:50%;
@@ -81,7 +81,7 @@
       position: -webkit-stikey;
       top:0;
     }
-    main > input {
+    div > input {
       background-color:#1E1E1E;
       outline:none;
       font-size:20px;
@@ -103,11 +103,11 @@
     </style>
 </head>
   <body>
-    <main>
+    <div>
     <header>
     </header>
       <input type="text" placeholder="Titile">
       <textarea name="markdown" id="mark" data-provide="markdown" placeholder="hello world"></textarea>
-    </main>
+    </div>
 </body>
 </html>
