--- a/index.html
+++ b/index.html
@@ -73,15 +73,7 @@
       caret-color:#FF7842;
       border:2px;
     }
-    header{
-      background-color:#1A1A1A;
-      padding:23px;
-      width:90%;
-      position: sticky;
-      position: -webkit-stikey;
-      top:0;
-    }
-    div > input {
+    main > input {
       background-color:#1E1E1E;
       outline:none;
       font-size:20px;
@@ -103,11 +95,11 @@
     </style>
 </head>
   <body>
-    <div>
-    <header>
+     <header>
     </header>
+    <main>
       <input type="text" placeholder="Titile">
       <textarea name="markdown" id="mark" data-provide="markdown" placeholder="hello world"></textarea>
-    </div>
+    </main>
 </body>
 </html>
