--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       overflow-x:hidden;
       width:100%;
     }
-    div{
+    main {
       display:flex;
       flex-direction:column;
       max-width:50%;
