--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       display:flex;
       flex-direction:column;
       max-width:50%;
-      height:95vh;
+      height:100%;
       background-color:#1E1E1E;
       margin:0 auto;
     }
