--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
       color:white;
       font-weight:bold;
     }
+    header{
+    background-color: #f0f0f0;
+    width: 100%;
+    position: fixed;
+    z-index: 999;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 200px ;
+    }
     @media only screen and (max-width: 1200px){
       main{
         max-width:100%;
