--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       input {
         width:100%;
       }
+      header{
+        padding:25px 20px;
+
+      }
     }
     </style>
 </head>
