--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <a href="">vizkex blog</a>
       <nav class="nav">
       <a href=""><i class="fa-solid fa-paper-plane" style="color: #000000;"></i></a>
-      
+      <a href=""</a>
       </nav>
       <img src="noborder.png" alt="">
     </header>
