--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       background-color:greenyellow;
       border-radius:30px;
     }
-    header > img {
+    header > nav > img {
       height:30px;
     }
     @media only screen and (max-width: 1200px){
@@ -146,8 +146,8 @@
       <nav class="nav">
       <a href=""><i class="fa-solid fa-paper-plane" style="color: #000000;"></i></a>
       <a href=""</a>
+            <img src="noborder.png" alt="">
       </nav>
-      <img src="noborder.png" alt="">
     </header>
     <div class="mainmarkdown">
       <input type="text" placeholder="Titile">
